feat: add some new features
